--- a/.github/workflows/all-prod-workflow.yml
+++ b/.github/workflows/all-prod-workflow.yml
@@ -1,24 +1,24 @@
-#name: all-apps-prod
+name: all-apps-prod
 
-#on:
-#  push:
-#    branches: [ main ]
+on:
+  push:
+    branches: [ all-main ] # change to "main" if you want to compile services in one single file
 
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout sources
-#        uses: actions/checkout@v3
-#
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: '17'
-#          distribution: 'adopt'
-#
-#      - name: Build application
-#        run: mvn clean verify
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+
+      - name: Build application
+        run: mvn clean verify
 
       # Build and push docker image
       # docker build . --build-arg JAR_FILE=services/${{ inputs.service }}/target/app.jar -t <tag>
