--- a/services/app1/pom.xml
+++ b/services/app1/pom.xml
@@ -31,11 +31,6 @@
 	</scm>
 
 	<properties>
-		<java.version>17</java.version>
-		<kotlin.version>1.9.24</kotlin.version>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
@@ -71,6 +66,13 @@
 		<dependency>
 			<groupId>com.example</groupId>
 			<artifactId>database</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<!--Validation module-->
+		<dependency>
+			<groupId>com.example</groupId>
+			<artifactId>validation</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
